--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -2,10 +2,37 @@
 
 // ;
 
-@import "compass/utilities"
-@import "compass/reset"
-@import "compass/css3"
-@import "vendor/_grid.scss"
+// **************************************************
+
+@mixin clearfix
+  *zoom: 1
+
+  overflow: hidden
+
+@mixin legacy-pie-clearfix
+  *zoom: 1
+
+  &:after
+    content: "\0020"
+    display: block
+    height: 0
+    clear: both
+    overflow: hidden
+    visibility: hidden
+
+@mixin pie-clearfix
+  *zoom: 1
+
+  &:after
+    content: ""
+    display: table
+    clear: both
+
+// **************************************************
+
+@import "reset"
+@import "grid"
+@import "bourbon/bourbon"
 
 // **************************************************
 
