only  upon errors

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -47,23 +47,31 @@ $max_width: 960px;
 // **************************************************
 
 @mixin grid-container {
-  width: $total_width;
-  max-width: $max_width;
-  margin: 0 auto !important;
   @include container;
   @include pie-clearfix;
+  width: $total_width;
+  max-width: $max_width;
+  margin: 0 auto;
 }
 
 @mixin subgrid {
-  margin: 0 !important;
-  width: 100% !important;
-  position: relative;
   @include container;
   @include pie-clearfix;
+  margin: 0;
+  width: 100%;
 }
 
-@mixin row {
-  @include pie-clearfix;
+@mixin background-image-retina($file, $type, $width, $height) {
+  background-image: url($file + "." + $type);
+  @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (-moz-min-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2 / 1), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
+    & {
+      background-image: url($file + "@2x." + $type);
+      -webkit-background-size: $width $height;
+      -moz-background-size: $width $height;
+      -o-background-size: $width $height;
+      background-size: $width $height;
+    }
+  }
 }
 
 // **************************************************
@@ -77,18 +85,20 @@ $max_width: 960px;
   position: relative;
 }
 
-.grid-container {
-  @include grid-container;
-  position: relative;
-  width: 100%;
-}
-
 .subgrid {
   @include subgrid;
+  position: relative;
 }
 
-.row {
-  @include row;
+.fontsmoothing {
+  -webkit-font-smoothing: antialiased;
+  -moz-font-smoothing: antialiased;
+  -ms-font-smoothing: antialiased;
+  font-smoothing: antialiased;
+}
+
+.no-flick {
+  @include transform(translate3D(0, 0, 0));
 }
 
 * {
