--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -4,35 +4,10 @@
 
 // **************************************************
 
-@mixin clearfix
-  *zoom: 1
-
-  overflow: hidden
-
-@mixin legacy-pie-clearfix
-  *zoom: 1
-
-  &:after
-    content: "\0020"
-    display: block
-    height: 0
-    clear: both
-    overflow: hidden
-    visibility: hidden
-
-@mixin pie-clearfix
-  *zoom: 1
-
-  &:after
-    content: ""
-    display: table
-    clear: both
-
-// **************************************************
-
 @import "reset"
 @import "grid"
 @import "bourbon/bourbon"
+@import "mixins"
 
 // **************************************************
 
@@ -41,33 +16,6 @@ $total_columns: 12
 $container_margin: 2%
 $gutter_width: 6%
 $max_width: 960px
-
-// **************************************************
-
-@mixin grid-container
-  +container
-  +pie-clearfix
-  width: $total_width
-  max-width: $max_width
-  margin: 0 auto 
-
-@mixin subgrid
-  +container
-  +pie-clearfix
-  margin: 0 
-  width: 100% 
-  
-@mixin background-image-retina($file, $type, $width, $height)
-  background-image: url($file + '.' + $type)
-
-  @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (-moz-min-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2/1), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx)
-    &
-      background-image: url($file + '@2x.' + $type)
-      -webkit-background-size: $width $height
-      -moz-background-size: $width $height
-      -o-background-size: $width $height
-      background-size: $width $height
-// **************************************************
 
 .clearfix
   +pie-clearfix
@@ -79,15 +27,6 @@ $max_width: 960px
 .subgrid
   +subgrid
   position: relative
-
-.fontsmoothing
-  -webkit-font-smoothing: antialiased
-  -moz-font-smoothing: antialiased
-  -ms-font-smoothing: antialiased
-  font-smoothing: antialiased
-
-.no-flick
-  +transform(translate3D(0, 0, 0))
 
 *
   +box-sizing(border-box)
